--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
     
 }
 
-.navlinks {
+.navlinks, #sub-text {
     text-decoration: none;
     font-size: 18px;
     color: #E5E7EB;
@@ -37,4 +37,22 @@ body {
     width: 50%;
     align-items: center;
     justify-content: center;
+}
+
+#main-text {
+    font-size: 48px;
+    font-weight: 900;
+    color: #F9FAF8;
+}
+
+.content {
+    display: flex;
+    flex-direction: row;
+}
+
+.content-left, .content-right {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
