--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 * {
     margin: 0;
     padding: 0;
-    /* outline: 2px solid red; */
+    outline: 2px solid red;
 }
 
 body {
@@ -11,7 +11,7 @@ body {
     font-family: "Roboto", sans-serif;
     font-weight: 400;
 }
-
+/* Section 1 */
 .section-one {
     
     background-color: #1F2937;
@@ -92,3 +92,18 @@ img {
     border-radius: 5px;
     cursor: pointer;
 }
+/* Section 1 */
+
+/* Section 2 */
+h2 {
+    text-align: center;
+    font-size: 32px;
+    color: #1F2937;
+    font-weight: 900;
+}
+
+.blue-box-row {
+    display: flex;
+    flex-direction: row;
+}
+/* Section 2 */
