--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 * {
     margin: 0;
     padding: 0;
-    outline: 2px solid red;
+    /* outline: 2px solid red; */
 }
 
 body {
@@ -102,8 +102,29 @@ h2 {
     font-weight: 900;
 }
 
+.section-two {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
 .blue-box-row {
     display: flex;
     flex-direction: row;
+    justify-content: space-around;
+    /* max-width: 100%; */
+    margin: 100px;
+}
+
+.blue-box {
+    border: 4px solid #3882F6;
+    width: 200px;
+    height: 200px;
+    border-radius: 10px;
+}
+
+.second-subtext {
+    text-align: center;
+    font-size: 18px;
 }
 /* Section 2 */
