--- a/style.css
+++ b/style.css
@@ -65,7 +65,6 @@ body {
 .content-left {
     display: flex;
     justify-content: center;
-    /* align-items: center; */
     flex-direction: column;
     width: 50%;
     margin-left: 200px;
@@ -112,7 +111,6 @@ h2 {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    /* max-width: 100%; */
     margin: 100px;
 }
 
@@ -128,3 +126,44 @@ h2 {
     font-size: 18px;
 }
 /* Section 2 */
+
+/* Section 3 */
+
+.section-three {
+    background-color: #E5E7EB;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 100px;
+    align-items: center;
+    position: relative;
+}
+
+#quote {
+    font-size: 36px;
+    font-style: italic;
+    font-weight: lighter;
+    color: #1F2937;
+    text-align:justify;
+}
+
+
+#quote-source {
+    font-weight: bolder;
+    font-size: 28px;
+    position: absolute; /* Position relative to the parent container */
+    bottom: 64px; /* Push to the bottom */
+    right: 383px; /* Push to the right */
+}
+
+/* Section 3 */
+
+/* Section 4 */
+
+.blue-action-box {
+    background-color: #3882F6;
+    border-radius: 10px;
+    margin: 50px;
+}
+
+/* Section 4 */
