--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 * {
     margin: 0;
     padding: 0;
-    outline: 2px solid red;
+    /* outline: 2px solid red; */
 }
 
 body {
@@ -163,7 +163,7 @@ h2 {
 /* Section 4 */
 
 .section-four {
-    height: 300px;
+    height: 400px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -175,9 +175,11 @@ h2 {
     height: 40%;
     display: flex;
     flex-direction: row;
+    border-radius: 10px;
 }
 
 .left-side {
+    color: #E5E7EB;
     width: 80%;
     margin-left: 100px;
     display: flex;
@@ -191,4 +193,35 @@ h2 {
     font-weight:900;
 }
 
+.right-side {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 200px;
+}
+
+#signup-button-bottom {
+    font-size: 18px;
+    color: white;
+    background-color: #3882F6;
+    width: 150px;
+    height: 45px;
+    border: 3px solid white;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
 /* Section 4 */
+
+/* Section 5 */
+
+.footer {
+    height: 100px;
+    color: #E5E7EB;
+    background-color: #1F2937;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/* Section 5 */
